--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
 
   release:
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+    needs: test
     runs-on: ubuntu-latest
     steps:
     - name: Checkout local repo
