--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Test image
-      run: sudo make test
+      run: make test
 
   release:
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
